--- a/package.json
+++ b/package.json
@@ -1,90 +1,44 @@
 {
-  "name": "react",
+  "name": "spatialforce-frontend",
   "version": "1.0.0",
-  "main": "react.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "type": "module",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@svgr/webpack": "^8.1.0",
-    "@types/aos": "^3.0.7",
-    "@types/geojson": "^7946.0.16",
-    "@types/js-cookie": "^3.0.6",
-    "@types/leaflet": "^1.9.19",
-    "@types/leaflet-routing-machine": "^3.2.8",
-    "@types/node": "^22.15.33",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/react-helmet": "^6.1.11",
-    "@types/react-lazy-load-image-component": "^1.6.4",
-    "@types/zxcvbn": "^4.4.5",
-    "@vitejs/plugin-react": "^4.6.0",
-    "terser": "^5.43.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.3.5",
-    "vite-plugin-static-copy": "^3.1.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "framer-motion": "^10.18.0",
+    "axios": "^1.7.8",
+    "js-cookie": "^3.0.5",
+    "react-helmet-async": "^2.0.6",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
-    "@simonwep/pickr": "^1.9.1",
-    "@stripe/react-stripe-js": "^3.1.1",
-    "@stripe/stripe-js": "^5.6.0",
-    "@types/lodash": "^4.17.17",
-    "@types/styled-components": "^5.1.34",
-    "aos": "^2.3.4",
-    "axios": "^1.10.0",
-    "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
-    "country-list": "^2.3.0",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "focus-trap-react": "^11.0.3",
-    "framer-motion": "^10.18.0",
-    "google-auth-library": "^9.15.1",
-    "js-cookie": "^3.0.5",
+    "@mui/icons-material": "^6.4.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "leaflet": "^1.9.4",
-    "leaflet-control-geocoder": "^3.2.0",
-    "leaflet-routing-machine": "^3.2.12",
-    "leaflet.heat": "^0.2.0",
-    "libphonenumber-js": "^1.12.5",
-    "lodash": "^4.17.21",
-    "nodemailer": "^6.10.0",
-    "ol": "^10.6.1",
-    "pg": "^8.13.3",
-    "react": "^19.1.0",
-    "react-datepicker": "^8.1.0",
-    "react-dom": "^19.1.0",
-    "react-google-recaptcha": "^3.1.0",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.4.0",
-    "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
-    "react-leaflet-draw": "^0.20.6",
-    "react-ol": "^0.1.12",
-    "react-router-dom": "^7.1.5",
-    "react-slideshow-image": "^4.3.2",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
+    "react-icons": "^5.4.0",
     "styled-components": "^6.1.19",
-    "zxcvbn": "^4.4.2"
+    "react-datepicker": "^8.1.0",
+    "react-google-recaptcha": "^3.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
+    "vite": "^6.3.5",
+    "typescript": "^5.7.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.19"
   }
 }
