--- a/package.json
+++ b/package.json
@@ -5,40 +5,46 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "framer-motion": "^10.18.0",
-    "axios": "^1.7.8",
-    "js-cookie": "^3.0.5",
-    "react-helmet-async": "^2.0.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/material": "^6.4.3",
-    "@mui/icons-material": "^6.4.3",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^5.0.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "aos": "^2.3.4",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "focus-trap-react": "^11.0.3",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet.heat": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.4.0",
-    "styled-components": "^6.1.19",
-    "react-datepicker": "^8.1.0",
-    "react-google-recaptcha": "^3.1.0"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.3",
-    "vite": "^6.3.5",
-    "typescript": "^5.7.3",
+    "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.19",
+    "@types/leaflet-routing-machine": "^3.2.9",
+    "@types/leaflet.heat": "^0.2.5",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/js-cookie": "^3.0.6",
-    "@types/leaflet": "^1.9.19"
+    "@vitejs/plugin-react": "^4.3.3",
+    "terser": "^5.37.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.1.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
